Fixing dropdown menu text alignment

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -98,7 +98,7 @@ footer{
 .dropdown-menu{
   width: 63%;
   text-align: center;
-  /*background-color: #461D7C;
+  /*background-color: #461D7C;*/
 }
 
 /*.contact-me {
@@ -107,6 +107,6 @@ footer{
   padding-top: 30px;
 }*/
 
-.p{
+/*.p{
   text-align: center;
-}
+}*/
